--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -28,6 +28,7 @@
                 aria-controls="offcanvasExample" data-bs-target="#offcanvasExample"
                 (click)="getHotelesId(hot._id)">Editar</a></div>
             <div class="d-grid"><a class="btn btn-outline-danger" (click)="deleteHotel(hot._id)">Eliminar</a></div>
+            <div class="d-grid"><a class="btn btn-outline"  routerLink="/habitaciones">Habitaciones</a></div>
           </div>
         </div>
       </div>
