--- a/src/app/components/habitaciones/habitaciones.component.html
+++ b/src/app/components/habitaciones/habitaciones.component.html
@@ -3,7 +3,7 @@
     <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
-                <h2 class="fw-bolder">Conoce a todas las habitaciones de Genrry XD</h2>
+                <h2 class="fw-bolder">Conoce a todas las habitaciones</h2>
                 <p class="lead fw-normal text-muted mb-5">Mantente al día y conoce todas las habitaciones disponibles</p>
             </div>
         </div>
