--- a/src/app/components/habitaciones/habitaciones.component.html
+++ b/src/app/components/habitaciones/habitaciones.component.html
@@ -68,6 +68,16 @@
                         <label for="inputPrecio " class="form-label ">Precio</label>
                         <input type="text " id="inputPrecio " class="form-control " name="precio" #precio="ngModel" [(ngModel)]="habitacionModelPost.precio">
                     </div>
+
+                    <div  class="mg-3 ">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
+
+                    </div>
                 </form>
 
             </div>
