--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -55,7 +55,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline" type="submit">Search</button>
+                  <button class="btn btn-outline" type="submit" *ngIf="Admin">Search</button>
                 </form>
                 <form class="form-inline my-2 my-lg-0">
                     <button class="btn" routerLink="sign-up">Registrarse</button>
@@ -63,5 +63,6 @@
                 </form>
             </div>
         </nav>
+
     </div>
 </div>
