--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -2,8 +2,10 @@
     <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
-                <h2 class="fw-bolder">Conoce a todos los hoteles</h2>
-                <p class="lead fw-normal text-muted mb-5">Mantente al día y conoce todos los hoteles disponibles</p>
+
+                <input [(ngModel)]="searchHotel" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline" type="submit" >Search</button>
+
             </div>
         </div>
     </div>
@@ -13,7 +15,7 @@
     </button>
         <div class="row gx-5">
             <div class="row gx-5">
-                <div class="col-lg-4 mb-5" *ngFor="let hot of hotelesModelGet">
+                <div class="col-lg-4 mb-5" *ngFor="let hot of hotelesModelGet | searchHotel:searchHotel">
                     <div class="card h-100 shadow border-0">
                         <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="...">
                         <div class="card-body p-4">
