--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -53,12 +53,12 @@
                         <a class="nav-link" routerLink="hoteles" >Hoteles</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline" type="submit" >Search</button>
-                </form>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn" routerLink="sign-up">Registrarse</button>
+                    <button class="btn"   routerLink="sign-up">Registrarse</button>
+
+                    <button   class="btn"
+                    routerLink="sing-up-gerente">RegistrarGerente</button>
+
                     <button class="btn" routerLink="sign-in">Login</button>
                     <button class="btn" routerLink="sign-in" (click)="VaciarToken()">Cerrar Sesión</button>
 
