Flooter en pagina Inicio

--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -2,22 +2,32 @@
     <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
-
+                
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-lg-8 col-xl-6">
+                        <div class="text-center">
+                            <h2 class="fw-bolder">Realiza una</h2>
+                        </div>
+                    </div>
+                </div>
                 <input [(ngModel)]="searchHotel" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline" type="submit">Search</button>
+                
+                <br>
+                <br>
+                <br>
 
             </div>
         </div>
     </div>
     <div class="mb-3">
-        <button *nfIf="role === 'ADMIN'" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button *ngIf="role === 'ADMIN'" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
       <h6 class="text-center">Agregar hotel</h6>
     </button>
         <div class="row gx-5">
             <div class="row gx-5">
                 <div class="col-lg-4 mb-5" *ngFor="let hot of hotelesModelGet | searchHotel:searchHotel">
                     <div class="card h-100 shadow border-0">
-                        <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="...">
+                        <img class="card-img-top" src="https://www.preferente.com/wp-content/uploads/2021/04/hotel-1280x720.jpg" alt="...">
                         <div class="card-body p-4">
                             <div class="badge bg-primary bg-gradient rounded-pill mb-2">Hotel</div>
                             <h5 class="card-title mb-3">{{hot.nombre}}</h5>
