--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Button Agregar "Modal" -->
-    <button *ngIf="role === 'ADMIN'" type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#agregarEvento">
+    <button *ngIf="role === 'Gerente'" type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#agregarEvento">
        Agregar un nuevo Evento
     </button>
 
@@ -34,7 +34,7 @@
                         Estarán presentes {{ Even.asistentes }} asistentes.
                     </p>
                 </div>
-                <div *ngIf="role === 'ADMIN'" class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                <div *ngIf="role === 'Gerente'" class="card-footer p-4 pt-0 bg-transparent border-top-0">
                     <div class="d-flex align-items-end justify-content-between">
                         <button type="button" class="btn btn-warning" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" (click)="getEventoId(Even._id)">Editar</button>
                         <button type="button" class="btn btn-danger" (click)="deleteEvento(Even._id)">Eliminar</button>
