--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -2,7 +2,7 @@
     <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
-                
+
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6">
                         <div class="text-center">
@@ -11,7 +11,6 @@
                     </div>
                 </div>
                 <input [(ngModel)]="searchHotel" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                
                 <br>
                 <br>
                 <br>
@@ -19,6 +18,12 @@
             </div>
         </div>
     </div>
+
+    <!-- Button Graficas -->
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button class="btn btn-success me-md-2" type="button" routerLink="/graficas">Gráfica de Hoteles más cotizados</button>
+    </div>
+
     <div class="mb-3">
         <button *ngIf="role === 'ADMIN'" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
       <h6 class="text-center">Agregar hotel</h6>
