--- a/src/app/components/graficas/graficas.component.html
+++ b/src/app/components/graficas/graficas.component.html
@@ -18,7 +18,7 @@
           </div>
 
             <div class="col-lg-3 col-md-4 d-flex">
-              <button class="btn btn-primary w-10 align-self-center bi bi-arrow-return-left" routerLink="/usuario/sucursales">Regresar</button>
+              <button class="btn btn-primary w-10 align-self-center bi bi-arrow-return-left"  routerLink="/hoteles" >Regresar</button>
             </div>
 
             <div style="display: block;">
