--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -19,10 +19,10 @@
         </div>
     </div>
 
-    <!-- Button Graficas -->
+    <!-- Button Graficas
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <button class="btn btn-success me-md-2" type="button" routerLink="/graficas">Gráfica de Hoteles más cotizados</button>
-    </div>
+    </div> -->
 
     <div class="mb-3">
         <button *ngIf="role === 'ADMIN'" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
