--- a/src/app/components/hoteles/hoteles.component.scss
+++ b/src/app/components/hoteles/hoteles.component.scss
@@ -1,6 +1,15 @@
 .btn-circle-xl {
-  width: 70px;
-  height: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  width: 100%;
+  height: 100%;
   line-height: 70px;
   font-size: 1.3rem;
 }
