--- a/src/app/components/habitaciones/habitaciones.component.html
+++ b/src/app/components/habitaciones/habitaciones.component.html
@@ -16,6 +16,9 @@
     </div>
     <button class="btn btn-success" type="button" routerLink="/servicios">Servicios</button>
     <!-- Button Agregar Modal -->
+    <button *ngIf="role === 'Gerente'" type="button" class="btn btn-primary mb-2" routerLink="/reservacion">
+        Ver reservaciones
+      </button>
     <button *ngIf="role === 'Gerente'" type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#agregarHabitacion">
       Agregar una nueva Habitación
     </button>
