--- a/src/app/components/reservacion/reservacion.component.html
+++ b/src/app/components/reservacion/reservacion.component.html
@@ -1,1 +1,13 @@
-<p>reservacion works!</p>
+<div class="row gx-5">
+
+    <div class="col-lg-4 mb-5" *ngFor="let hab of reservacionModelGetIdH">
+
+        <div class="card h-100 shadow border-0">
+            <img class="card-img-top" src="https://images.e-tsw.com/_lib/vimages/Cancun/Hotels/Hard-Rock-Hotel-Cancun/Gallery/a-Cancun-Hard-Rock-Deluxe-Gold-King-DLXDBLCA.jpg" alt="...">
+            <div class="card-body p-4">
+                <div class="badge bg-primary bg-gradient rounded-pill mb-2">{{ hab.numeroDias }}</div>
+                <div class="badge bg-primary bg-gradient rounded-pill mb-2">{{ hab.idHabitacion }}</div>
+            </div>
+        </div>
+    </div>
+</div>
