--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
                     <li class="nav-item active">
                         <a class="nav-link" routerLink="home">Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" *ngIf="role !== 'Gerente'">
                         <a class="nav-link" routerLink="hoteles">Hoteles</a>
                     </li>
                     <li *ngIf="role === 'ADMIN'" class="nav-item">
@@ -62,7 +62,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                   <button *ngIf="role ==='Usuario'" class="btn" routerLink="perfil">Perfil</button>
-                  <button *ngIf="role ==='Gerente'" class="btn" routerLink="admin">Administrar Hotel</button>
+                  <button *ngIf="role ==='Gerente'" class="btn" routerLink="/admin">Administrar Hotel</button>
                     <button *ngIf="!isAuthenticated" class="btn" routerLink="sign-up">Registrarse</button>
                     <button *ngIf="!isAuthenticated" class="btn" routerLink="sign-in">Login</button>
                     <button *ngIf="isAuthenticated" class="btn" routerLink="sign-in" (click)="VaciarToken()">Cerrar Sesión</button>
